...
        headerTintColor: setLightOrDark(COLORS.zinc[950], COLORS.zinc[200]),
        contentStyle: { backgroundColor: setLightOrDark(COLORS.zinc[200], COLORS.zinc[950]) },
        headerShadowVisible: false,
        headerBackButtonDisplayMode: "minimal",
      }}
    >
      <Stack.Screen name="index" options={{ title: "Explore" }} />
      <Stack.Screen
        name="profileSearch"
        options={{
          title: "Search",
          headerTitle: () => {
            return (
...
                />
              </View>
            );
          },
        }}
      />
      <Stack.Screen name="list" options={{ title: "Posts" }} />
      <Stack.Screen name="profileDetails" options={{ title: "Profile" }} />
      <Stack.Screen name="profilePostsList" options={{ title: "Posts" }} />
      <Stack.Screen name="taggedPosts" options={{ title: "Tagged Posts" }} />
      <Stack.Screen name="taggedPostsList" options={{ title: "Tagged Posts" }} />
      <Stack.Screen name="followers" options={{ title: "Followers" }} />
      <Stack.Screen name="following" options={{ title: "Following" }} />
...
