import { Stack } from "expo-router";

import { COLORS } from "@/constants/Colors";
import { useColorMode } from "@/context/ColorModeContext";

const ProfileStack = () => {
  const { isDarkMode } = useColorMode();

  return (
    <Stack
      screenOptions={{
        headerStyle: { backgroundColor: isDarkMode ? COLORS.zinc[950] : COLORS.zinc[200] },
        headerTintColor: isDarkMode ? COLORS.zinc[50] : COLORS.zinc[950],
        contentStyle: { backgroundColor: isDarkMode ? COLORS.zinc[950] : COLORS.zinc[200] },
        headerShadowVisible: false,
        headerBackButtonDisplayMode: "minimal",
      }}
      initialRouteName="index"
    >
      <Stack.Screen name="index" options={{ title: "Profile" }} />
      <Stack.Screen name="add" options={{ title: "Add Profile" }} />
      <Stack.Screen name="guidelines" options={{ title: "Community Guidelines" }} />
      <Stack.Screen name="about" options={{ title: "About" }} />
      <Stack.Screen name="editProfile" options={{ title: "Edit Profile" }} />
      <Stack.Screen name="editUsername" options={{ title: "Edit Username" }} />
      <Stack.Screen name="accountOptions" options={{ title: "Account" }} />
      <Stack.Screen name="changePassword" options={{ title: "Change Password" }} />
      <Stack.Screen name="changeEmail" options={{ title: "Change Email" }} />
      <Stack.Screen name="verifyEmail" options={{ title: "Verify Email" }} />
      <Stack.Screen name="deleteProfile" options={{ title: "Delete Profile" }} />
      <Stack.Screen name="deleteAccount" options={{ title: "Delete Account" }} />
      <Stack.Screen name="profileImageCamera" options={{ title: "Profile Image Camera", headerShown: false }} />
      <Stack.Screen name="feedback/createFeedback" options={{ title: "New Feedback" }} />
      <Stack.Screen name="feedback/index" options={{ title: "Feedback" }} />
      <Stack.Screen name="feedback/[id]" options={{ title: "Details" }} />
      <Stack.Screen name="qrCode" options={{ title: "QR Code" }} />
      <Stack.Screen name="profileDetails" options={{ title: "Profile Details" }} />
      <Stack.Screen name="profilePostsList" options={{ title: "Posts" }} />
      <Stack.Screen name="taggedPosts" options={{ title: "Tagged Posts" }} />
      <Stack.Screen name="taggedPostsList" options={{ title: "Tagged Posts" }} />
      <Stack.Screen name="appDetails" options={{ title: "App Details" }} />
      <Stack.Screen name="profileReports/index" options={{ title: "Profile Reports" }} />
      <Stack.Screen name="profileReports/[id]" options={{ title: "Report Details" }} />
      <Stack.Screen name="postReports/index" options={{ title: "Post Reports" }} />
      <Stack.Screen name="postReports/[id]" options={{ title: "Report Details" }} />
      <Stack.Screen name="followers" options={{ title: "Followers" }} />
      <Stack.Screen name="following" options={{ title: "Following" }} />
      <Stack.Screen name="blockedProfiles" options={{ title: "Blocked Profiles" }} />
      <Stack.Screen name="termsOfService" options={{ title: "Terms of Service" }} />
    </Stack>
  );
};

export default ProfileStack;
