...
          </Pressable>
          <Pressable
            style={({ pressed }) => [pressed && s.pressed, s.centeredButton]}
            onPress={handleSwitchProfilePress}
          >
            <MaterialIcons name="people" size={20} color={ICON_COLOR} />
            <Text style={s.buttonText}>Switch Profile</Text>
          </Pressable>
        </View>
        <View style={{ backgroundColor: BUTTON_BG, borderRadius: BORDER_RADIUS }}>
          {/* Edit Username Button */}
          <Pressable
            style={({ pressed }) => [
...
            <Text style={s.buttonText}>Edit Profile</Text>
            <Entypo name="chevron-small-right" size={24} color={ICON_COLOR} />
          </Pressable>

          {/* Account Options Button */}
          <Pressable style={({ pressed }) => [pressed && s.pressed, s.linkButton]} onPress={handleAccountOptionsPress}>
            <Text style={s.buttonText}>Account Options</Text>
            <Entypo name="chevron-small-right" size={24} color={ICON_COLOR} />
          </Pressable>
        </View>
      </BottomSheetView>
    </BottomSheetModal>
  );
...
