...
      ),
      headerRight: () => (
        <Pressable
          onPressOut={() => profileOptionsModalRef.current?.present()}
          style={({ pressed }) => [pressed && { opacity: 0.7 }, { paddingHorizontal: 8, paddingVertical: 8 }]}
          hitSlop={20}
          testID="view-profile-options-button"
        >
          <SimpleLineIcons name="options" size={18} color={setLightOrDark(COLORS.zinc[900], COLORS.zinc[300])} />
        </Pressable>
      ),
    });
  });
...
              alignItems: "center",
              gap: 8,
              justifyContent: "space-between",
            }}
          >
            <Text style={{ ...s.cardTitle, marginBottom: 8 }} darkColor={COLORS.zinc[50]} lightColor={COLORS.zinc[800]}>
              Privacy
            </Text>
            <Ionicons
              name={authProfile.is_private ? "lock-closed-outline" : "lock-open-outline"}
              size={20}
              color={
                authProfile.is_private
...
