...
          }}
          buttonStyle={{ paddingHorizontal: 8, paddingBottom: 4 }}
        />
      ),
      headerRight: () => (
        <Button
          text="Save"
          variant="text"
          onPress={handleProfileUpdate}
          buttonStyle={{ paddingHorizontal: 10, paddingBottom: 4 }}
          textStyle={{ color: setLightOrDark(COLORS.sky[600], COLORS.sky[500]), fontWeight: "500" }}
          disabled={updateProfileLoading}
          loading={updateProfileLoading}
...
                    text="Learn More"
                    onPress={() => privateProfileModalRef.current?.present()}
                    hitSlop={10}
                  />
                </Text>
              </View>
              <Switch value={isPrivate} onValueChange={(val) => setIsPrivate(val)} testID="private-profile-switch" />
            </View>
          </View>
        </View>
      </View>
      <PrivateProfileModal ref={privateProfileModalRef} />
    </ScrollView>
...
