...
            <>
              <PostSkeleton />
              <PostSkeleton />
              <PostSkeleton />
            </>
          }
          emptyMessage="Oh no! Your feed is empty. Follow some users to see their posts here!"
          containerStyle={s.emptyComponentContainer}
          errorMessage="There was an error fetching your feed."
          errorSubMessage="Swipe down to try again."
        />
      }
      onScroll={(event) => {
...
