# exploreFollowProfile.yaml

# Test navigating to Profile and following/un-following profile

appId: com.bdykun.onlypawsapp.dev
# name: Explore Follow Profile Flow

---
- launchApp

- tapOn: ".*Explore"

# tap on first explore post
- tapOn:
    point: "17%,20%"
- assertVisible: "Posts"
# top on first post username
- tapOn:
    point: "23%,14%"
- assertVisible: 0, FOLLOWERS
- tapOn: "follow"
- assertVisible: 1, FOLLOWERS
- assertVisible: "unfollow"
- tapOn: "unfollow"
- assertVisible: 0, FOLLOWERS
- assertVisible: "follow"
